test_src/compiler_errors/types/binary/AndFloatError3.b
class AndFloatError3 {
    void test() {
        var value = 42;
        println(value &= 14.0);
    }
}
